project name change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="yugibuteo">
+  <meta name="description" content="yeogibuteo">
   <meta name="flutter-web-renderer" content="html">
 
   <!-- iOS meta tags & icons -->
@@ -17,8 +17,8 @@
   <meta property="og:title" content="여기부터"/>
   <meta property="og:description" content="여기부터 모바일 키오스크"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://m.grab-thumb.com/*"/>
-  <meta property="og:image" content="https://github.com/sunyongIM/grab-thumb/blob/master/assets/images/from_here.png?raw=true"/>
+  <meta property="og:url" content="https://m.yeogibuteo.com/*"/>
+  <meta property="og:image" content="https://github.com/sunyongIM/yeogibuteo_mobile/blob/master/assets/assets/images/from_here.png?raw=true"/>
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logo_button.png"/>
@@ -27,7 +27,7 @@
   <link rel="manifest" href="manifest.json">
 
   <script>
-    var serviceWorkerVersion = "3833004844";
+    var serviceWorkerVersion = "3228912658";
   </script>
 </head>
 <body>
